unpackaged/main/default/objects/OpportunityLineItem/fields/AddOn_RollUp_Category__c.field-meta.xml
<CustomField>
    <fullName>AddOn_RollUp_Category__c</fullName>
    <label>AddOn RollUp Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>