unpackaged/main/default/objects/OpportunityLineItem/fields/Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount__c</fullName>
    <formula>TotalPrice  * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>