unpackaged/main/default/objects/OpportunityLineItem/fields/Feed_Integration_Options__c.field-meta.xml
<CustomField>
    <fullName>Feed_Integration_Options__c</fullName>
    <label>Feed Integration Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Luxury Portfolio</fullName>
            </value>
            <value>
                <fullName>Leading RE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>