unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this product was added as part of a bundle, the system checks this. This allows us to remove/replace bundle products while retaining any one time products that were added.</description>
    <label>Is Bundle Product?</label>
    <type>Checkbox</type>
</CustomField>