unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Recurring_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring_Add_On__c</fullName>
    <formula>IF(Is_Bundle_Product__c = false &amp;&amp; AddOn_RollUp_Category__c &lt;&gt; &#39;One Time Fee&#39;, &#39;Recurring AddOn&#39;, &#39;&#39;)</formula>
    <label>Is Recurring Add On?</label>
    <type>Text</type>
</CustomField>