unpackaged/main/default/objects/OpportunityLineItem/fields/One_Time_Fee__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fee__c</fullName>
    <formula>PricebookEntry.One_Time_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Time Fee?</label>
    <type>Checkbox</type>
</CustomField>