unpackaged/main/default/objects/OpportunityLineItem/fields/Opportunity_Product_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Product 18 Digit ID</label>
    <type>Text</type>
</CustomField>