unpackaged/main/default/objects/OpportunityLineItem/fields/Option_Selected__c.field-meta.xml
<CustomField>
    <fullName>Option_Selected__c</fullName>
    <label>Option Selected</label>
    <type>TextArea</type>
</CustomField>