unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Sort_Order__c</fullName>
    <formula>PricebookEntry.Product2.Product_Sort_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>