unpackaged/main/default/objects/OpportunityLineItem/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>