unpackaged/main/default/objects/OpportunityLineItem/fields/Tier_Plan_Product__c.field-meta.xml
<CustomField>
    <fullName>Tier_Plan_Product__c</fullName>
    <formula>PricebookEntry.Tier_Plan_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Plan Product?</label>
    <type>Checkbox</type>
</CustomField>