unpackaged/main/default/objects/OpportunityLineItem/validationRules/Brand_Identity.validationRule-meta.xml
<ValidationRule>
    <fullName>Brand_Identity</fullName>
    <active>true</active>
    <errorConditionFormula>AND (

(Opportunity.RecordType.Name= &quot;New Sales&quot;),
(Product_Name__c = &quot;(Do Not Use) Brand Identity&quot;)
)</errorConditionFormula>
    <errorMessage>Brand Identity has been deprecated. Please select a supported product.</errorMessage>
</ValidationRule>