unpackaged/main/default/objects/OpportunityLineItem/validationRules/Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISNEW(),
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 $Profile.Name &lt;&gt; &quot;System Admin&quot;,
 $Profile.Name &lt;&gt; &quot;Operations Team&quot;,
OR(
 ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
 ISPICKVAL(Opportunity.StageName, &quot;Closed Lost&quot;)
)
)</errorConditionFormula>
    <errorMessage>You can not add a product to an opportunity that is already Closed.</errorMessage>
</ValidationRule>